--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#1f1f1f"/>
+    <meta name="background-color" content="#347b98"/>
+    <meta name="apple-mobile-web-app-title" content="Omer Gaizinger">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta
       name="description"
       content="Web site created using create-react-app"
