--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#1f1f1f"/>
+    <meta name="theme-color" content="#347b98"/>
     <meta name="background-color" content="#347b98"/>
     <meta name="apple-mobile-web-app-title" content="Omer Gaizinger">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
